--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,26 @@
+
 body {
-  background-color: blue;
+  margin: 0;
+}
+
+h1{
+  margin-top: 0;
+}
+
+/* **************************CLASS SELECTORS************************************/
+
+.top_box{
+  background-color: #dfd3c3;
+}
+
+.middle_box{
+  background-color: #c7b198;
+  height: 200px;
+  width:  200px;
+}
+
+.bottom_box{
+  background-color: #f0ece3;
+  height: 200px;
+  width:  200px;
 }
